--- a/medicalAppointments/medicalAppointments/medicalAppointments.csproj
+++ b/medicalAppointments/medicalAppointments/medicalAppointments.csproj
@@ -169,6 +169,8 @@
     <Content Include="Views\Paciente\Index.cshtml" />
     <Content Include="Views\Paciente\Create.cshtml" />
     <Content Include="Views\Paciente\Edit.cshtml" />
+    <Content Include="Views\Paciente\Delete.cshtml" />
+    <Content Include="Views\Paciente\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
