:sparkles: Add: Read from DB for Doctor and Appointment

--- a/medicalAppointments/medicalAppointments/medicalAppointments.csproj
+++ b/medicalAppointments/medicalAppointments/medicalAppointments.csproj
@@ -120,12 +120,18 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CitasController.cs" />
+    <Compile Include="Controllers\DoctoresController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PacienteController.cs" />
+    <Compile Include="DAL\CitasDAL.cs" />
+    <Compile Include="DAL\DoctorDAL.cs" />
     <Compile Include="DAL\PacienteDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Citas.cs" />
+    <Compile Include="Models\Doctores.cs" />
     <Compile Include="Models\Paciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -171,6 +177,8 @@
     <Content Include="Views\Paciente\Edit.cshtml" />
     <Content Include="Views\Paciente\Delete.cshtml" />
     <Content Include="Views\Paciente\Details.cshtml" />
+    <Content Include="Views\Citas\Index.cshtml" />
+    <Content Include="Views\Doctores\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
