--- a/medicalAppointments/medicalAppointments/medicalAppointments.csproj
+++ b/medicalAppointments/medicalAppointments/medicalAppointments.csproj
@@ -179,6 +179,8 @@
     <Content Include="Views\Paciente\Details.cshtml" />
     <Content Include="Views\Citas\Index.cshtml" />
     <Content Include="Views\Doctores\Index.cshtml" />
+    <Content Include="Views\Citas\Create.cshtml" />
+    <Content Include="Views\Doctores\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
